spacing fixed

--- a/menu.css
+++ b/menu.css
@@ -73,12 +73,11 @@
 /* ---------- MOBILE DROPDOWN STYLES ---------- */
 @media (max-width: 768px) {
   .col-12 {
-    width: 90%;
+    width: 100%;
     max-width: 100%;
-    padding-top: 10px;
+    padding: 10px 10px;
     box-sizing: border-box;
     margin: 0 auto;
-    transform: translateX(-30px);
   }
   .sidebar {
     flex-direction: row;
